# Yahoo-VMAR-Bot

./: .gitignore  DEPLOYMENT.md
backend/: .env.example  .gitignore  README.md  botvmar.service  deploy.sh  install.sh  prisma_seed_reference.ts  pyproject.toml  requirements.txt
backend/deploy/: nginx.conf
backend/scripts/: login.py  login_reddit.py  login_stocktwits.py  reddit_test.py
backend/src/botvmar/: __init__.py  api.py  main.py  state.py  worker.py
backend/src/botvmar/adapters/: __init__.py  base.py  registry.py
backend/src/botvmar/adapters/reddit/: __init__.py  actions.py  adapter.py  scraper.py
backend/src/botvmar/adapters/stocktwits/: __init__.py  actions.py  adapter.py  scraper.py
backend/src/botvmar/adapters/yahoo_finance/: __init__.py  adapter.py
backend/src/botvmar/ai/: responder.py
backend/src/botvmar/auth/: __init__.py  auto_login.py  imap_reader.py  login_reddit.py  login_stocktwits.py  login_yahoo.py
backend/src/botvmar/browser/: session.py  stealth.py
backend/src/botvmar/config/: env.py  platforms.py  runtime.py
backend/src/botvmar/db/: pool.py
backend/src/botvmar/db/repositories/: activities.py  comments.py  platform_settings.py  runs.py  settings.py  whitelist.py
backend/src/botvmar/poster/: actions.py
backend/src/botvmar/scheduling/: __init__.py  skip_rules.py  slots.py
backend/src/botvmar/scraper/: comments.py
backend/src/botvmar/services/: bot_service.py  platform_runner.py
backend/src/botvmar/utils/: logger.py  notifier.py
docs/: ADDING_A_PLATFORM.md  ARCHITECTURE.md  README.md  REDDIT_SETUP.md
(+54 files in other folders)
