[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botvmar"
version = "0.2.0"
description = "Yahoo Finance VMAR community bot — backend worker + control API"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.52.0",
    "playwright-stealth>=2.0.0",
    "openai>=1.30.0",
    "python-dotenv==1.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "aiosmtplib>=3.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
botvmar = ["py.typed"]
